@@ -61,6 +61,14 @@ Summary of important user-visible changes for version 4.4 (yyyy-mm-dd):
 
  ** Other new functions added in 4.4:
 
+      camlookat
+      camorbit
+      campos
+      camroll
+      camtarget
+      camup
+      camva
+      camzoom
       corrcoef
       getframe
       gsvd
